--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=18.0.0 <23.0.0"
+  },
   "dependencies": {
     "@laiyon/wasapi-sdk": "^0.1.14",
     "@types/fs-extra": "^11.0.4",
