refactor: Update package.json file structure and remove unused ESLint configuration
- Modified package.json to simplify the files array by using directory paths instead of glob patterns.
- Deleted unused ESLint configuration file for base TypeScript application to streamline project structure.

--- a/package.json
+++ b/package.json
@@ -38,11 +38,10 @@
     "url": "https://github.com/juanalvarezPro/create-laiyon/issues"
   },
   "files": [
-    "dist/**/*",
-    "bin/**/*",
-    "starters/**/*",
-    "README.md",
-    "LICENSE"
+    "dist/",
+    "bin/",
+    "starters/",
+    "README.md"
   ],
   "dependencies": {
     "@laiyon/wasapi-sdk": "^0.1.14",
