chore: Rename package from base-bailey-json to base-wasapi-memory in package.json

--- a/starters/apps/base-ts-wasapi-memory/package.json
+++ b/starters/apps/base-ts-wasapi-memory/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base-bailey-json",
+  "name": "base-wasapi-memory",
   "version": "1.0.2",
   "description": "",
   "main": "dist/app.js",
