feat: optimize package size by excluding incomplete templates

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "files": [
     "dist/",
     "bin/",
-    "starters/",
+    "starters/apps/base-ts-wasapi-json/",
+    "starters/apps/base-ts-wasapi-memory/",
     "README.md"
   ],
   "dependencies": {
