--- a/package.json
+++ b/package.json
@@ -50,15 +50,19 @@
     "dotenv": "^17.2.1",
     "fs-extra": "^11.3.1",
     "inquirer": "^12.9.1",
+    "mongodb": "^6.18.0",
+    "mysql2": "^3.14.3",
     "ngrok": "^5.0.0-beta.2",
     "node-fetch": "^3.3.2",
     "ora": "^8.2.0",
+    "pg": "^8.16.3",
     "qrcode-terminal": "^0.12.0",
     "simple-git": "^3.28.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^24.2.1",
+    "@types/pg": "^8.15.5",
     "jest": "^30.0.5",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
