--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
     "node-fetch": "^3.3.2",
     "ora": "^8.2.0",
     "pg": "^8.16.3",
-    "qrcode-terminal": "^0.12.0",
-    "simple-git": "^3.28.0"
+    "qrcode-terminal": "^0.12.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
